# databend

./: Cargo.toml
common/datablocks/: Cargo.toml
common/datavalues/: Cargo.toml
common/datavalues/src/: data_schema.rs
common/exception/: Cargo.toml
common/flights/: Cargo.toml
common/functions/: Cargo.toml
common/planners/: Cargo.toml
common/progress/: Cargo.toml
common/streams/: Cargo.toml
docs/doc/60-contributing/03-rfcs/: 20220806-identifier-naming-convention.md
fusequery/benchmarks/nyctaxi/: Cargo.toml
fusequery/query/: Cargo.toml
fusestore/store/: Cargo.toml
query/src/pipelines/new/processors/: mod.rs
query/src/pipelines/new/processors/transforms/: mod.rs  transform_filter_v2.rs  transform_rename.rs  transform_scalar.rs
query/src/sql/exec/: expression_builder_v2.rs  mod.rs  pipeline_builder.rs
query/src/sql/optimizer/: s_expr.rs
query/src/sql/planner/: mod.rs
query/src/sql/planner/binder/: aggregate.rs  bind_context.rs  join.rs  mod.rs  select.rs  subquery.rs
query/src/sql/planner/plans/: aggregate.rs  mod.rs  scalar.rs
query/src/sql/planner/semantic/: type_check.rs
scripts/setup/: rust-toolchain.toml
src/query/planner/src/: lib.rs  metadata.rs
src/query/profile/: Cargo.toml
src/query/profile/src/: lib.rs  prof.rs  record.rs
src/query/profile/tests/: serialize.rs
src/query/service/src/interpreters/: interpreter_table_create_v2.rs
src/query/service/src/sql/executor/: context.rs  format.rs  mod.rs  physical_plan.rs  (+4 more)
src/query/sql/src/executor/: profile.rs
src/query/storages/system/src/: query_profile_table.rs
(+4 files in other folders)
