[package]
name = "common-profile"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = false

[dependencies]
common-base = { path = "../../common/base" }
common-exception = { path = "../../common/exception" }
serde = { workspace = true }
serde_json = { workspace = true }

dashmap = "5.4"
